--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;500;700&display=swap");
 
 :root {
   --orange: hsl(25, 97%, 53%);
@@ -43,7 +43,7 @@ p {
 .thank-you {
   background-color: var(--dark-blue);
   padding: 1.5rem;
-  border-radius: 0.625rem;
+  border-radius: 2rem;
   max-width: 400px;
 }
 
@@ -61,6 +61,7 @@ p {
 
 .main-container p {
   color: var(--light-grey);
+  padding-bottom: 1.5rem;
 }
 
 .main-container ul {
@@ -117,6 +118,7 @@ p {
   align-items: center;
   justify-content: center;
   text-align: center;
+  padding-top: 3rem;
 }
 
 .thank-you img {
@@ -136,6 +138,8 @@ p {
 .thank-you h2 {
   color: white;
   margin-bottom: 1rem;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 .thank-you p {
