--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ body {
   font-family: "Overpass", sans-serif;
   font-size: 15px;
   background-color: var(--very-dark-blue);
-  margin: 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 ul {
@@ -56,7 +56,7 @@ p {
 .main-container h1 {
   color: #fff;
   margin: 2rem 0 1rem;
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .main-container p {
